2004-04-28  Jackson Harper  <jackson@ximian.com>

	* runtime/net_1_1/Makefile.am: Grab libs from proper directory, do
	not assume gacutil is installed.
	* runtime/net_2_0/Makefile.am: Do not assume gacutil is installed.
	
2004-04-28  Jackson Harper  <jackson@ximian.com>

	* configure.in: Add new Makefile.amS
	* runtime/Makefile.am: libs are now in profile dependant
	directories.
	* runtime/net_1_1/Makefile.am: Install and Uninstall the .net 1.1
	libs to the GAC.
	* runtime/net_2_0/Makefile.am: Install and Uninstall the .net 2.0
	libs to the GAC.
	* data/Makefile.am: cleanup browscap.ini
	
2004-04-28  Bernie Solomon  <bernard@ugsolutions.com>

	* configure.in: reword message re EGD support
	now it is there

2004-04-28  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* config.h.in:
	* configure.in: added check for sys/aio.h. Also check the field name
	in 'union sigval'.

2004-04-28  Jackson Harper  <jackson@ximian.com>

	* scripts/Makefile.am:
	* scripts/gacutil.in: Add a gacutil script

2004-04-26  Jackson Harper  <jackson@ximian.com>

	* Makefile.am: Grab libraries from lib/default now.
	* runtime/Makefile.am: Grab libraries from lib/default now.
	
2004-04-26  Bernie Solomon  <bernard@ugsolutions.com>

	* configure.in: move setting of NO_VERSION_SCRIPT
	until after checking for GNU ld

2004-04-22  Urs C Muff <umuff@quark.com>

	move .net assemblies from $prefix/bin/*.exe to $prefix/lib/*.exe on
	windows/cygwin refactor .nsi to simply maintenance on script/batch
	generation
	* runtime/Makefile.am
	* script/Makefile.am
	* monowiz.win32.nsi

2004-04-14  Raja R Harinath  <rharinath@novell.com>

	* runtime/Makefile.am ($(assemblies_DATA)): Copy file into
	$(srcdir).  Clean up output.
	($(monobins_DATA)): Likewise.

	* Makefile.am (mcs-tree-safe-build): Fix typo.

2004-04-13  Sebastien Pouliot  <sebastien@ximian.com>

	* configure.in: Added rules to check for getgrgid_r, getgrnam_r,
	getpwnam_r, getpwuid_r, getresuid and setresuid.
